@@ -46,6 +46,7 @@ libpurple/connection.c
 libpurple/conversation.c
 libpurple/conversationtypes.c
 libpurple/data/gconf/purple.schemas.in
+libpurple/data/purple-url-handler.desktop.in
 libpurple/dbus-server.c
 libpurple/dbus-server.h
 libpurple/http.c
